--- a/Carbon.Core/Carbon/packages.config
+++ b/Carbon.Core/Carbon/packages.config
@@ -4,6 +4,12 @@
   <package id="DnsClient" version="1.6.1" targetFramework="net48" />
   <package id="Fody" version="6.5.5" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="3.3.3" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="4.3.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="4.3.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="4.3.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="4.3.0" targetFramework="net48" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net48" />
@@ -16,7 +22,7 @@
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections" version="4.3.0" targetFramework="net48" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net48" />
-  <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="6.0.0" targetFramework="net48" />
   <package id="System.Console" version="4.3.0" targetFramework="net48" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net48" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net48" />
@@ -39,6 +45,7 @@
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net48" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net48" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net48" />
+  <package id="System.Reflection.Metadata" version="5.0.0" targetFramework="net48" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net48" />
@@ -55,7 +62,7 @@
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net48" />
-  <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net48" />
+  <package id="System.Text.Encoding.CodePages" version="6.0.0" targetFramework="net48" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net48" />
   <package id="System.Text.Json" version="6.0.5" targetFramework="net48" />
