--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -34,14 +34,36 @@
 		<VersionSuffix>$(Configuration)</VersionSuffix>
 		<AssemblyVersion>$(Version)</AssemblyVersion>
 		<FileVersion>$(VersionPrefix)</FileVersion>
-		<InformationalVersion>$(VersionPrefix)-$(VersionSuffix)</InformationalVersion>
+
 		<RootNamespace>$(MSBuildProjectName.Replace(" ", "_")).Core</RootNamespace>
 		<Version>1.$([System.DateTime]::UtcNow.ToString('yy.ddMM')).10</Version>
 	</PropertyGroup>
 
-	<PropertyGroup>
-		<OutputPath>bin\$(Configuration)\</OutputPath>
-	</PropertyGroup>
+	<Choose>
+		<When Condition="Exists('.gitag')">
+			<PropertyGroup>
+				<InformationalVersion>$(VersionPrefix)-$(VersionSuffix)$([System.IO.File]::ReadAllText('$(SolutionDir)\Carbon\.gitag').Trim())</InformationalVersion>
+			</PropertyGroup>
+		</When>
+		<Otherwise>
+			<PropertyGroup>
+				<InformationalVersion>$(VersionPrefix)-$(VersionSuffix)</InformationalVersion>
+			</PropertyGroup>
+		</Otherwise>
+	</Choose>
+
+	<Choose>
+		<When Condition="Exists('.rndasm') AND $(Configuration.Contains('Debug'))">
+			<PropertyGroup>
+				<AssemblyName>$([System.IO.File]::ReadAllText('$(SolutionDir)Carbon\.rndasm').Trim())</AssemblyName>
+			</PropertyGroup>
+		</When>
+		<Otherwise>
+			<PropertyGroup>
+				<AssemblyName>$(Product)</AssemblyName>
+			</PropertyGroup>
+		</Otherwise>
+	</Choose>
 
 	<Choose>
 		<When Condition="$(Configuration.Contains('Release'))">
@@ -57,6 +79,7 @@
 			<PropertyGroup>
 				<DebugType>embedded</DebugType>
 				<DefineConstants>DEBUG;UNITY_ASSERTIONS;$(DefineConstants)</DefineConstants>
+				<OutputPath>bin\$(Configuration)\</OutputPath>
 				<TreatWarningsAsErrors>false</TreatWarningsAsErrors>
 			</PropertyGroup>
 		</Otherwise>
@@ -92,12 +115,20 @@
 	<ItemGroup>
 		<!-- System libs -->
 		<Reference Include="Microsoft.CSharp" />
+		<Reference Include="System.Buffers" />
+		<Reference Include="System.Collections.Immutable" />
 		<Reference Include="System.Core" />
+		<Reference Include="System.Data.SQLite" />
 		<Reference Include="System.Data" />
 		<Reference Include="System.Drawing.Design" />
 		<Reference Include="System.Drawing" />
 		<Reference Include="System.IO.Compression.FileSystem" />
 		<Reference Include="System.Memory" />
+		<Reference Include="System.Numerics.Vectors" />
+		<Reference Include="System.Reflection.Metadata" />
+		<Reference Include="System.Runtime.CompilerServices.Unsafe" />
+		<Reference Include="System.Text.Encoding.CodePages" />
+		<Reference Include="System.Threading.Tasks.Extensions" />
 		<Reference Include="System.Xml" />
 		<Reference Include="System" />
 	</ItemGroup>
@@ -113,7 +144,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<!-- Nuget packages -->
+		<!-- Assembly weaver -->
 		<PackageReference Include="Costura.Fody" Version="5.7.0">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
@@ -122,31 +153,39 @@
 		<PackageReference Include="Ben.Demystifier" Version="0.4.1">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="MySql.Data" Version="8.0.31" />
 
 		<!-- Required by Carbon's Compiler -->
 		<PackageReference Include="protobuf-net.Core" Version="3.1.17">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
+
 		<PackageReference Include="protobuf-net" Version="3.1.17">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
+
 		<PackageReference Include="Roslynator.CSharp" Version="4.1.1">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="System.Data.SQLite" Version="1.0.116" />
+
+		<!-- Required by Carbon's Database support -->
+		<PackageReference Include="MySql.Data" Version="8.0.31" />
+		<PackageReference Include="System.Data.SQLite.Core" Version="1.0.116" />
 	</ItemGroup>
 
 
-	<!-- ========================== -->
-	<!-- BUILD TASK SEQUENCER BELOW -->
-	<!-- ========================== -->
-	<Target Name="CleanOutput" AfterTargets="Clean">
-		<Delete Files="$(OutputPath)Carbon.dll" />
-		<Delete Files="$(OutputPath)$(TargetName).dll" />
+	<!-- ============================ -->
+	<!--  CLEAN ADDITONAL FILES TASK  -->
+	<!-- ============================ -->
+	<Target Name="CleanOutputPath" AfterTargets="Clean">
+		<Message Text="&gt;&gt; Removing files from $(OutputPath)" Importance="high" />
+		<Delete Files="$(OutputPath)$(Product).dll" />
+		<Delete Files="$(OutputPath)$(Product)-*.dll" />
 	</Target>
 
-	<Target Name="CustomPrepareForBuild" AfterTargets="_GenerateRestoreProjectSpec">
+	<!-- =============================== -->
+	<!--  GENERATE RANDOM ASM NAME TASK  -->
+	<!-- =============================== -->
+	<Target Name="RandomASMNameGenerator" AfterTargets="_GenerateRestoreProjectSpec">
 		<PropertyGroup>
 			<RandomASM>$(Product)-$([System.DateTime]::UtcNow.ToString('HHmmfff'))</RandomASM>
 		</PropertyGroup>
@@ -163,35 +202,48 @@
 			<Gitag>-$(GitBranch)-$(GitCommitHash)</Gitag>
 		</PropertyGroup>
 
-		<WriteLinesToFile File="$(SolutionDir)Carbon\.gitag" Overwrite="true" Lines="$(Gitag)" />
-		<WriteLinesToFile File="$(SolutionDir)Carbon\.rndasm" Overwrite="true" Lines="$(RandomASM)" />
+		<WriteLinesToFile File="$(SolutionDir)$(Product)\.gitag" Overwrite="true" Lines="$(Gitag)" />
+		<WriteLinesToFile File="$(SolutionDir)$(Product)\.rndasm" Overwrite="true" Lines="$(RandomASM)" />
 	</Target>
 
+	<!-- ========================== -->
+	<!--  PRINT BUILD CONTEXT TASK  -->
+	<!-- ========================== -->
 	<Target Name="CustomBeforeCompile" BeforeTargets="BeforeCompile">
+		<Message Text="&gt;&gt; Product: $(Product)" Importance="high" />
+		<Message Text="&gt;&gt; Runtime: $(MSBuildRuntimeType)" Importance="high" />
 		<Message Text="&gt;&gt; Build ID: $(InformationalVersion)" Importance="high" />
 		<Message Text="&gt;&gt; Build Target: $(Configuration)|$(Platform)" Importance="high" />
 		<Message Text="&gt;&gt; Build Assembly Name: $(AssemblyName)" Importance="high" />
 		<Message Text="&gt;&gt; Build Constants: $(DefineConstants)" Importance="high" />
 	</Target>
 
-	<Target Name="CustomAfterBuild" AfterTargets="AfterBuild">
-		<Copy SourceFiles="$(OutputPath)$(TargetName).dll" DestinationFiles="$(OutputPath)Carbon.dll" />
+	<!-- ================================ -->
+	<!--  RENAME THE BUILD ARTIFACT TASK  -->
+	<!-- ================================ -->
+	<Target Name="RenameBuildOutput" AfterTargets="PostBuildEvent">
+		<Message Text="&gt;&gt; Rename the build artifact from '$(OutputPath)$(TargetName).dll' to '$(OutputPath)$(Product).dll'" Importance="high" />
+		<Copy SourceFiles="$(OutputPath)$(TargetName).dll" DestinationFiles="$(OutputPath)$(Product).dll" />
+		<Delete Files="$(OutputPath)$(TargetName).dll" />
+	</Target>
+
+	<!-- ========================== -->
+	<!--  CLEAN OUTPUT FOLDER TASK  -->
+	<!-- ========================== -->
+	<Target Name="CleanOutputFolder" AfterTargets="RenameBuildOutput">
+		<Message Text="&gt;&gt; Cleaning output folder" Importance="high" />
 
 		<ItemGroup>
 			<FilesToDelete Include="$(OutputPath)*.dll" Exclude="$(OutputPath)Carbon.dll;$(OutputPath)Carbon-*.dll" />
+			<FilesToDelete Include="$(OutputPath)0Harmony.dll" />
+			<FilesToDelete Include="$(OutputPath)Assembly-*.dll" />
+			<FilesToDelete Include="$(OutputPath)Facepunch.*.dll" />
+			<FilesToDelete Include="$(OutputPath)Fleck.dll" />
+			<FilesToDelete Include="$(OutputPath)Facepunch.*.dll" />
+			<FilesToDelete Include="$(OutputPath)Rust.*.dll" />
+			<FilesToDelete Include="$(OutputPath)UnityEngine*.dll" />
 		</ItemGroup>
 
-		<Message Text="&gt;&gt; Cleaning output folder" Importance="high" />
-		<Delete Files="@(FilesToDelete)">
-			<Output TaskParameter="DeletedFiles" ItemName="FilesDeleted" />
-		</Delete>
+		<Delete Files="@(FilesToDelete)" />
 	</Target>
-
-	<PropertyGroup Condition="Exists('.gitag')">
-		<InformationalVersion>$(VersionPrefix)-$(VersionSuffix)$([System.IO.File]::ReadAllText('$(SolutionDir)\Carbon\.gitag').Trim())</InformationalVersion>
-	</PropertyGroup>
-
-	<PropertyGroup Condition="Exists('.rndasm') AND $(Configuration.Contains('Debug'))">
-		<AssemblyName>$([System.IO.File]::ReadAllText('$(SolutionDir)Carbon\.rndasm').Trim())</AssemblyName>
-	</PropertyGroup>
-</Project>
+</Project>                                 
